feat: update Feed imports

--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-VITE_ENDPOINT="https://cloud.appwrite.io/v1"
+VITE_ENDPOINT=https://cloud.appwrite.io/v1
 VITE_PROJECT_ID=65fa45aabb9d995b7044
 VITE_DB_ID=65fa51057f2cc6f2e2d2
 VITE_COLLECTION_ID_THREADS = 65fa51696c57d78d7b18
