--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-dom": "^18.2.0",
     "react-feather": "^2.0.10",
     "react-router-dom": "^6.22.3",
+    "react-spinners": "^0.13.8",
     "react-time-ago": "^7.3.1"
   },
   "devDependencies": {
