--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "react-feather": "^2.0.10",
     "react-router-dom": "^6.22.3",
     "react-spinners": "^0.13.8",
-    "react-time-ago": "^7.3.1"
+    "react-time-ago": "^7.3.1",
+    "react-toastify": "^10.0.5"
   },
   "devDependencies": {
     "@types/react": "^18.2.64",
